Fix #7 - Key shortcuts.
Allow arrow keys and vim like keys to navigate the list of passwords:

 - Up Arrow or Ctrl-k : Select previous password entry.
 - Down Arrow or Ctrl-j : Select next password entry.
 - Enter: Fill login form with currently selected password entry.

For better effect assign a key shortcut to the extension in the Chrome
extension manager.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -9,7 +9,7 @@
   <body>
     <form>
     <p class="title">Passwords:</p>
-    <p><select id="passSelect" size="20"> </select></p>
+    <p><select id="passSelect" size="20" tabIndex="-1"> </select></p>
     <p class="title">Search:</p>
     <p><input id="passSearch" name="regexp"></input></p>
     <p id="nativeError" class="error hidden">
